--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mystic Pictures</title>
+    <title>Monumental Pictures</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -49,4 +49,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
