--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header class="header">
-        <h1 class="logo">Monumental
+        <h1 class="logo">MYSTIC
         </h1>
         <div class="burger-menu">
             <div class="burger-line"></div>
@@ -55,4 +55,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
