--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mystic Pictures</title>
+    <title>Monumental Pictures</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header class="header">
-        <h1 class="logo">MYSTIC
+        <h1 class="logo">MONUMENTAL
         </h1>
         <div class="burger-menu">
             <div class="burger-line"></div>
@@ -57,3 +57,4 @@
 </body>
 
 </html>
+
